# pmsh

./: Cargo.toml  LICENSE  README.md  cobertura.xml  dist-workspace.toml  lcov.info  test_output.txt  test_script.sh
.github/workflows/: auto-tag.yml  ci.yml  coverage.yml  publish.yml
src/: autocomplete.rs  builtins.rs  colors.rs  completion_registry.rs  executor.rs  functions.rs  history.rs  main.rs  parser.rs  path_utils.rs  repl.rs  ui.rs  variables.rs
src/builtins/: cd.rs  common.rs  compgen.rs  complete.rs  exit.rs  export.rs  history.rs  mod.rs  unset.rs  version.rs
tests/: integration_repl.rs  reverse_search.rs  test_autocomplete.rs  test_autocomplete_args.rs  test_compgen.rs  test_functions.rs  test_source.rs  test_subshell_fork.rs
