[package]
name = "pmsh"
version = "0.1.1"
edition = "2021"
description = "A custom shell written in Rust"
repository = "https://github.com/philipmiesbauer/pmsh"
license = "MIT"

[dependencies]
rustyline = "14.0.0"
clap = { version = "4.5.51", features = ["derive"] }
conch-parser = "0.1.1"
nix = { version = "0.29", features = ["process", "signal", "uio", "fs"] }

[dev-dependencies]
tempfile = "3"
serial_test = "2"
expectrl = "0.8"
regex = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
